test/call/string.lox
"str"() // error: can only call functions and structures
